--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <body>
         <h1>John Aydin's CSCE 190 Site</h1>
 
+        <section class="assignment">
+            <a href="files/Problem-Statement.pdf"><img src="images/Problem-Statement.png"></a>
+            <section class="ass-details">
+                <a href="files/Problem-Statement.pdf"><h2>Problem Statement: Assignment Manager</h2></a>
+                <p>As a group we all agreed that the unnecessary stress caused by classes using different websites would be a good problem to solve. All students can relate to the struggle of having to search through several sites just to see what homework we have assigned. Our app would act as a central hub to see what homework is due across multiple sites and help students better manage their time.</p>
+            </section>
+        </section>
     </body>
 </html>
