--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
                 <p>As a group we all agreed that the unnecessary stress caused by classes using different websites would be a good problem to solve. All students can relate to the struggle of having to search through several sites just to see what homework we have assigned. Our app would act as a central hub to see what homework is due across multiple sites and help students better manage their time.</p>
             </section>
         </section>
+        
+        <section class="assignment">
+            <a href="files/Affinity-Diagram.pdf"><img src="images/Jamboard-Visual.png"></a>
+            <section class="ass-details">
+                <a href="files/Affinity-Diagram.pdf"><h2>Affinity Diagram: Assignment Manager</h2></a>
+                <p>A visual we made to communicate our thought process for the concept and design of our website/app.</p>
+            </section>
+        </section>
     </body>
 </html>
