--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
                 <p>A visual we made to communicate our thought process for the concept and design of our website/app.</p>
             </section>
         </section>
+
+        <section class="assignment">
+            <a href="files/Personas.pdf"><img src="images/Personas.png"></a>
+            <section class="ass-details">
+                <a href="files/Personas.pdf"><h2>Personas: Assignment Manager</h2></a>
+                <p>These are a few example users of our app. We made these personas to indicate who would experience the problems that our app would solve and give insight into what would drive someone to use our service.</p>
+            </section>
+        </section>
     </body>
 </html>
