--- a/index.html
+++ b/index.html
@@ -30,5 +30,13 @@
                 <p>These are a few example users of our app. We made these personas to indicate who would experience the problems that our app would solve and give insight into what would drive someone to use our service.</p>
             </section>
         </section>
+
+        <section class="assignment">
+            <a href="files/StoryBoard.pdf"><img src="images/StoryBoard.png"></a>
+            <section class="ass-details">
+                <a href="files/StoryBoard.pdf"><h2>Story Board: Assignment Manager</h2></a>
+                <p>These are a few situations that we think our app would solve.</p>
+            </section>
+        </section>
     </body>
 </html>
