--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
                 <p>These are a few situations that we think our app would solve.</p>
             </section>
         </section>
+
+        <section class="assignment">
+            <a href="files/Sketches.pdf"><img src="images/Sketch.png"></a>
+            <section class="ass-details">
+                <a href="files/Sketches.pdf"><h2>Sketches: Assignment Manager</h2></a>
+                <p>These are rough sketches on how we plan on designing the app, but the final product will likely take inspiration from each concept.</p>
+            </section>
+        </section>
     </body>
 </html>
