--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                     <p>A prototype showing the intended funcionality and user experience of our app with paper.</p>
                 </section>
             </section>
+
+            <section class="assignment">
+                <a href="files/low-fi-prototype/preview.html"><img src="images/low-fi-prototype.png"></a>
+                <section class="ass-details">
+                    <a href="files/low-fi-prototype/preview.html"><h2>Low-Fi Prototype: Assignment Manager</h2></a>
+                    <p>This is an early version of what will become our Hi-Fi prototype. The goal of the low-fi prototype is to determine how we want our app to look.</p>
+                </section>
+            </section>
         </div>
     </body>
 </html>
