--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
                     <p>This is an early version of what will become our Hi-Fi prototype. The goal of the low-fi prototype is to determine how we want our app to look.</p>
                 </section>
             </section>
+
+            <section class="assignment">
+                <a href="files/Hi-Fi-Prototype/preview.html"><img src="images/hi-fi-prototype.png"></a>
+                <section class="ass-details">
+                    <a href="files/Hi-Fi-Prototype/preview.html"><h2>Hi-Fi Prototype: Assignment Manager</h2></a>
+                    <p>This is a more functional prototype that provides a clear representation of how our final product would look.</p>
+                </section>
+            </section>
         </div>
     </body>
 </html>
